welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: ')' expected but '}' found.
	avance(); nbPas=nbPas+1;prendBiscuit();recule(nbPas}
                                                           ^